package org.agoncal.training.javaee.service;


/**
 * @author Antonio Goncalves
 *         Training - Beginning with The Java EE 7 Platform
 *         http://www.antoniogoncalves.org
 *         --
 */
public interface NumberGenerator {

    // ======================================
    // =          Business methods          =
    // ======================================

    String generateNumber();
}
